--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3871,7 +3871,7 @@
       <a href="https://github.com/w3c/aria-practices/issues/505">issue 505.</a>
     </p>
     <p>
-      To present and describe a grid or table, in addition to parsing the headers, rows, and cells using the roles described in the
+      To fully present and describe a grid or table, in addition to parsing the headers, rows, and cells using the roles described in the
       <a href="#grid">grid pattern</a> or <a href="#table">table pattern</a>,
       assistive technologies need to be able to determine :
     </p>
@@ -3882,9 +3882,9 @@
       <li>Whether and how data is sorted.</li>
     </ul>
     <p>
-      Browsers can automatically calculate dimension information and put it into their accessibility tree based on what is in the DOM.
+      Browsers can automatically calculate the number of rows and columns and put it into their accessibility tree based on what is in the DOM.
       However, there are many situations where the DOM does not contain the whole table, such as when the data set is too large to fully render.
-      additionally, some of this information, like skipped columns or rows and how data is sorted, cannot be derived from the DOM structure.
+      Additionally, some of this information, like skipped columns or rows and how data is sorted, cannot be derived from the DOM structure.
     </p>
     <p>The below sections explain how to use the following properties that ARIA provides for grid and table accessibility.</p>
     <table class="widget-features">
@@ -3939,8 +3939,8 @@
     <section id="gridAndTableProperties_rows">
       <h3>Using <code>aria-rowcount</code> and <code>aria-rowindex</code></h3>
       <p>
-        When the number of rows represented by the DOM structure is not the total number of rows  available for a table, grid, or treegrid,
-        the  <code>aria-rowcount</code>  property is used to commyunicate the total number of rows available,
+        When the number of rows represented by the DOM structure is not the total number of rows available for a table, grid, or treegrid,
+        the  <code>aria-rowcount</code>  property is used to communicate the total number of rows available,
         and it is accompanied by the <code>aria-rowindex</code> property to identify the row indicies of the rows that are present in the DOM.
       </p>
       <p>
