--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
@@ -13,9 +13,9 @@
 
 <!--  js and css for this example. -->
 <link href="css/combobox-1.0.css" rel="stylesheet">
-<link href="css/listbox.css" rel="stylesheet">
-<script src="js/combobox-1.0-listbox.js" type="text/javascript"></script>
-<script src="js/listbox.js" type="text/javascript"></script>
+<link  href="css/listbox.css"     rel="stylesheet">
+<script src="js/combobox-1.0-list.js"  type="text/javascript"></script>
+<script src="js/listbox.js"       type="text/javascript"></script>
 <script src="js/listboxOption.js" type="text/javascript"></script>
 </head>
 <body>
@@ -28,13 +28,11 @@
     <p>
       The below combobox for choosing the name of a state in the USA demonstrates the
       <a href="../../../#combobox">ARIA 1.0 design pattern for combobox.</a>
-      This example illustrates the autocomplete behavior known as list autocomplete with manual selection. If the user
-      types one or more characters in the edit box and the typed characters match the beginning of the name of one or more
-      states or territories, a listbox popup appears containing the matching names. When the listbox appears, none of the
-      names are automatically selected. Thus, after typing, if the user tabs or clicks out of the combobox without
-      choosing a value from the listbox, the typed string becomes the value of the combobox. In other words, this
-      implementation enables users to input the name of a state or territory but does not prevent input of any other
-      arbetrary value.
+      This example illustrates the autocomplete behavior known as list autocomplete with manual selection.
+      If the user types one or more characters in the edit box and the typed characters match the beginning of the name of one or more states or territories, a listbox popup appears containing the matching names.
+      When the listbox appears, a suggested name is not automatically selected.
+      Thus, after typing, if the user tabs or clicks out of the combobox without choosing a value from the listbox, the typed string becomes the value of the combobox.
+      Note that this implementation enables users to input the name of a state or territory but does not prevent input of any other arbetrary value.
     </p>
     <p>Similar examples include:</p>
     <ul>
@@ -141,10 +139,6 @@
             <td>Opens the listbox and moves focus to the first suggested value.</td>
           </tr>
           <tr>
-            <th><kbd>Alt+Down Arrow</kbd></th>
-            <td>Opens the listbox without moving focus out of the textbox.</td>
-          </tr>
-          <tr>
             <th><kbd>Up Arrow</kbd></th>
             <td>Opens the listbox and moves focus to the last suggested value.</td>
           </tr>
@@ -152,9 +146,25 @@
             <th><kbd>Escape</kbd></th>
             <td>if open, closes the listbox.</td>
           </tr>
+          <tr>
+            <th><li>Standard single line text editing keys</th>
+            <td>
+              <ul>
+                <li>Keys used for cursor movement and text manipulation, such as <kbd>Delete</kbd> and <kbd>Shift + Right Arrow</kbd>.</li>
+                <li>As the value of the textbox changes, suggestions in the listbox change to show values that match the input; if there are no matches, the listbox is not visible.</li>
+                <li>Note: An HTML <code>input</code> with <code>type=<q>text</q></code> is used for the textbox so the browser will provide platform-specific editing keys.</li>
+              </ul>
+            </td>
+          </tr>
         </tbody>
       </table>
       <h3 id="kbd_label_listbox">Listbox Popup</h3>
+      <p>
+        <strong>NOTE:</strong> When visual focus is in the listbox, DOM focus remains on the textbox and the value of <code>aria-activedescendant</code> on the textbox is set to a value that refers to the listbox option that is visually indicated as focused.
+        Where the following descriptions of keyboard commands mention focus, they are referring to the visual focus indicator.
+        For more information about this focus management technique, see 
+        <a href="../../../#kbd_focus_activedescendant">Using aria-activedescendant to Manage Focus.</a>
+      </p>
       <table aria-labelledby="kbd_label_listbox kbd_label" class="def">
         <thead>
           <tr>
@@ -196,6 +206,24 @@
             </td>
           </tr>
           <tr>
+            <th><kbd>Right Arrow</kbd></th>
+            <td>
+              <ul>
+                <li>Returns focus to the textbox without closing the listbox.</li>
+                <li>Moves the input cursor one character to the right. If the input cursor is on the right-most character, the cursor does not move.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th><kbd>Left Arrow</kbd></th>
+            <td>
+              <ul>
+                <li>Returns focus to the textbox without closing the listbox.</li>
+                <li>Moves the input cursor one character to the left. If the input cursor is on the left-most character, the cursor does not move.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
             <th><kbd>Home</kbd></th>
             <td>Moves focus to the first <code>option</code>.</td>
           </tr>
@@ -204,13 +232,21 @@
             <td>Moves focus to the last <code>option</code>.</td>
           </tr>
           <tr>
-            <th>
-              <kbd>A-Z</kbd><br> <kbd>a-z</kbd>
-            </th>
+            <th>Printable Characters</th>
             <td>
               <ul>
-                <li>Moves focus to the option with a label that starts with the typed character if such an option exists.</li>
-                <li>Otherwise, focus does not move.</li>
+                <li>Returns focus to the textbox without closing the popup and types the character.</li>
+                <li>Note: the listbox content may change due to the new textbox value.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th>Standard Editing Keys<br>e.g., <kbd>Delete</kbd></th>
+            <td>
+              <ul>
+                <li>Return focus to the textbox without closing the popup.</li>
+                <li>Executes the platform-specific function for the key.</li>
+                <li>Note: the listbox content may change due to the new textbox value.</li>
               </ul>
             </td>
           </tr>
