Added contributors from removed author statements in JS files

--- a/common/acknowledgements.html
+++ b/common/acknowledgements.html
@@ -99,6 +99,7 @@
 			<li>Jan Heck</li>
 			<li>Shawn Henry</li>
 			<li>Tina Homboe</li>
+			<li>Nicholas Hoyt</li>
 			<li>John Hrvatin (Microsoft Corporation)</li>
 			<li>Takahiro Inada</li>
 			<li>Masayasu Ishikawa (W3C)</li>
@@ -111,6 +112,7 @@
 			<li>Jason Kiss (New Zealand Government)</li>
 			<li>Todd Kloots</li>
 			<li>Johannes Koch</li>
+			<li>Gerard K. Cohen</li>
 			<li>Sam Kuper</li>
 			<li>Earl Johnson (Sun)</li>
 			<li>Jael Kurz</li>
@@ -121,6 +123,7 @@
 			<li>Alex Li (SAP)</li>
 			<li>Chris Lilley</li>
 			<li>Thomas Logan (HiSoftware Inc.)</li>
+			<li>Brian Loh</li>
 			<li>William Loughborough (Invited Expert)</li>
 			<li>Linda Mao (Microsoft)</li>
 			<li>David MacDonald (Invited Expert, CanAdapt Solutions Inc.)</li>
@@ -129,6 +132,7 @@
 			<li>Krzysztof Maczyński </li>
 			<li>Matthew May (Adobe Systems Inc.)</li>
 			<li>Dominic Mazzoni (Google, Inc.)</li>
+			<li>Mark McCarthy</li>
 			<li>Alexandre Morgaut (4D)</li>
 			<li>Ann Navarro (Invited Expert)</li>
 			<li>Joshue O Connor (Invited Expert, CFIT)</li>
