Assigning Keyboard Shortcuts: Avoid Implying Single Key Assignments
Per feedback from @DavidMacDonald in issue #450,
modified assigning keyboard shortcuts section (id="kbd_shortcuts_assigning") in aria-practices.html.

changed the bullet item that suggested "S" would be used for "Save".
Now says "Control + S" for save.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3753,7 +3753,7 @@
         <h4>Assigning Keyboard Shortcuts</h4>
         <p>When choosing the keys to assign to a shortcut, there are many factors to consider.</p>
         <ul>
-          <li>Making the shortcut easy to learn and remember by using a mnemonic (e.g., "S" for "Save") or following a logical or spacial pattern.</li>
+          <li>Making the shortcut easy to learn and remember by using a mnemonic (e.g., <kbd>Control + S</kbd> for "Save") or following a logical or spacial pattern.</li>
           <li> Localizing the interface, including for differences in which keys are available and how they behave and for language considerations that could impact mnemonics. </li>
           <li>Avoiding and managing conflicts with key assignments used by an assistive technology, the browser, or the operating system.</li>
         </ul>
